Add color schem type

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "d3-sunburst-chart",
-  "version": "1.0.16",
+  "version": "1.0.18",
   "repository": "https://github.com/amastaneh/d3-sunburst-chart.git",
   "homepage": "https://github.com/amastaneh/d3-sunburst-chart#readme",
-  "description": "D3 Sunburst chart is a customizable sunburst chart as well as the well-known ring chart or radial treemap for showing a hierarchical dataset with percentage values in the leaf nodes.",
+  "description": "Online Sunburst chart is an online, customizable d3 sunburst chart in addition to the well-known ring chart or radial treemap for displaying a hierarchical dataset with quantitative values in the leaf nodes.",
   "author": "Amir Astaneh <amastaneh@gmail.com>",
   "license": "MIT",
   "scripts": {
