Rename from d3 to online

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 #HTTPS=true
-PUBLIC_URL="/d3-sunburst-chart"
-#REACT_APP_URL="https://amastaneh.github.io/d3-sunburst-chart"
+PUBLIC_URL="/online-sunburst-chart"
+#REACT_APP_URL="https://amastaneh.github.io/online-sunburst-chart"
